Fix del overflow en las cards de los detalles del producto

--- a/styles.css
+++ b/styles.css
@@ -432,7 +432,7 @@ main
     width: 90%;
     min-width: 288px;
     max-width: 400px;
-    height: 150px;
+    height: auto;
     margin: 15px auto;
     padding: 15px;
     background-color: var(--black);
@@ -488,3 +488,4 @@ main
 {
     background-image: url('./assets/icons/check-circle.svg');
 }
+
